--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -9,6 +9,7 @@
     --purple70:rgba(105,12,104,0.7);
     --purple90:rgba(105,12,104,0.90);
     --yellow:rgb(240,154,53);
+    --yellow5:rgba(240,154,53,0.05);
     --yellow10:rgba(240,154,53,0.1);
     --yellow20:rgba(240,154,53,0.2);
     --yellow30:rgba(240,154,53,0.3);
@@ -258,10 +259,11 @@ h5 span {font-size: 0.9em;}
     display:inline-block;
     width:auto;
 }
+.marginXBig{margin-top: 2.5em;margin-bottom: 2.5em;}
 .marginBig{margin-top: 1.5em;margin-bottom: 1.5em;}
 .marginSmall{margin-top: 0.5em;margin-bottom: 0.5em;}
-.marginBig.topOnly, .marginSmall.topOnly{margin-bottom: 0;}
-.marginBig.bottomOnly, .marginSmall.bottomOnly{margin-top: 0;}
+.marginXBig.topOnly, .marginBig.topOnly, .marginSmall.topOnly{margin-bottom: 0;}
+.marginXBig.bottomOnly, .marginBig.bottomOnly, .marginSmall.bottomOnly{margin-top: 0;}
 .paddedXBig{padding-top:2.5em;padding-bottom: 2.5em;}
 .paddedBig.topOnly{padding-bottom: 0em;}
 .paddedBig{padding-top:1.5em;padding-bottom: 1.5em;}
@@ -1198,12 +1200,14 @@ a:hover {color:var(--pink);}
 }
 .modal, .modalForm {
     background-color: rgb(245,245,245);
-    max-height: 90%;
-    max-width: 90%;
+    height: auto;
+    width: 96%;
+    max-height: 96%;
     margin: 0;
     padding: 2em 0.5em;
     border-radius: 5px;
     box-shadow: 0 0 15px 3px rgba(245,245,245);
+    border: 1px solid var(--gray);
 }
 
 #Notification .details{
@@ -1290,23 +1294,29 @@ a:hover {color:var(--pink);}
     text-align: left;
 }
 
-.hideTarget span, .hideFUs span {
+.hideTarget span.arrow, .hideFUs span.arrow {
     display: inline-block;
-    padding:0 0.5em 0 0;
+    /*padding:0 0.5em 0 0;*/
     color:rgb(130,130,130);
     font-size: 0.8em;
     width: 1.5em;
     height: 1.5em;
     background-size: contain;
     background-repeat: no-repeat;
+    transition: transform 500ms;
+    transform-origin: top left;
+    background-image: url(/images/icons/arrow-right.png);
+}
+.hideTarget span.label, .hideFUs span.label {
+    margin-left: 0.3em;
 }
 
 .hideTarget span.right, .hideFUs span.right {
-    background-image: url(/images/icons/arrow-right.png);
+    transform: rotate(0deg);
 }
 
 .hideTarget span.down, #scrollToBtm, .hideFUs span.down {
-    background-image: url(/images/icons/arrow-down.png);
+    transform: rotate(-30deg) translate(-0.6em,0px);
 }
 
 #scrollToBtm {
@@ -1317,6 +1327,7 @@ a:hover {color:var(--pink);}
     height: 3em;
     background-size: contain;
     cursor: pointer;
+    background-image: url(/images/icons/arrow-down.png);
 }
 .wrapper {
     position:relative;
