--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1512,9 +1512,11 @@ select {
   --purple5: rgba(105, 12, 104, 0.05);
   --purple10: rgba(105, 12, 104, 0.1);
   --purple15: rgba(105, 12, 104, 0.15);
+  --purple20: rgba(105, 12, 104, 0.2);
   --purple30: rgba(105, 12, 104, 0.3);
   --purple50: rgba(105, 12, 104, 0.5);
   --purple70: rgba(105, 12, 104, 0.7);
+  --purple80: rgba(105, 12, 104, 0.8);
   --purple90: rgba(105, 12, 104, 0.9);
   --yellow: rgb(240, 154, 53);
   --yellow5: rgba(240, 154, 53, 0.05);
@@ -1630,7 +1632,7 @@ body {
   font-weight: normal;
   line-height: 1.5;
   text-align: center;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-bottom: 4em;
   overflow-x: hidden;
@@ -1868,7 +1870,7 @@ h5 span {
 
 .central {
   width: 600px;
-  max-width: 90%;
+  max-width: 96%;
   margin: auto;
 }
 
