--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2135,8 +2135,8 @@ a:hover {
 }
 
 .siteMenu .title.active {
-  background-color: var(--yellow);
-  color: white;
+  /*background-color: var(--yellow);*/
+  /*color:black;*/
 }
 
 .siteMenu .underline {
@@ -2254,6 +2254,10 @@ a:hover {
 
 .button:hover {
   color: var(--white70);
+}
+
+.button.smallMargin {
+  margin: 0.1em 0.2em;
 }
 
 .button.large {
@@ -3123,21 +3127,11 @@ a:hover {
   margin: 0.5em -10px 0 -10px;
 }
 
-.mobile #Notifications .dropDown {
-  /*transform-origin: top right;
-  right:0;
-  left:unset;
-  transform: scale(0);*/
-}
-
-.mobile #Notifications .dropDown.active {
-  /*transform: scale(1);*/
-}
-
 #Notifications .dropDown .title {
   padding-left: 18px;
   padding-right: 18px;
   box-sizing: border-box;
+  margin: auto;
 }
 
 #Notifications .title.active {
@@ -3158,6 +3152,38 @@ a:hover {
   border-radius: 1em;
   font-size: 0.8em;
   font-weight: bold;
+}
+
+#Notifications .dropDown .selector {
+  position: absolute;
+  display: none;
+  bottom: 0;
+  right: 0;
+  -webkit-transform: translate(50%, 50%);
+          transform: translate(50%, 50%);
+  /*background-color: var(--pink90);*/
+  padding: 0.1em 0.5em;
+  color: var(--green);
+  border: 1px solid var(--green);
+  border-radius: 1em;
+  font-size: 0.8em;
+  font-weight: bold;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  left: 8px;
+  width: 10px;
+  height: 10px;
+  padding: 0;
+}
+
+#Notifications.multi .selector {
+  display: inline-block;
+}
+
+#Notifications .dropDown .active .selector {
+  box-shadow: 0 0 3px 3px var(--green70);
+  background-color: var(--green);
 }
 
 #Notifications .dropDown .indicator {
@@ -3318,7 +3344,6 @@ a:hover {
   background-color: rgba(250, 250, 250, 0.97);
   border: 4px solid rgba(240, 240, 240, 0.97);
   border-top-style: dotted;
-  margin-top: 3px;
   z-index: 51;
 }
 
@@ -3328,7 +3353,6 @@ a:hover {
   top: calc(7em + 3px);
   background-color: rgba(240, 240, 240, 0.97);
   box-shadow: 0 0 3px 3px rgba(240, 240, 240, 0.95);
-  margin-top: 3px;
   z-index: 49;
 }
 
@@ -3337,7 +3361,6 @@ a:hover {
   box-shadow: 0 0 3px 3px rgba(240, 240, 240, 0.95);
   border: 4px solid rgba(230, 230, 230, 0.97);
   border-top-width: 0;
-  margin-top: 3px;
   z-index: 50;
 }
 
@@ -3347,7 +3370,6 @@ a:hover {
   top: calc(10em + 6px);
   background-color: rgba(230, 230, 230, 0.97);
   box-shadow: 0 0 3px 3px rgba(230, 230, 230, 0.95);
-  margin-top: 3px;
   z-index: 48;
 }
 
@@ -3356,7 +3378,6 @@ a:hover {
   box-shadow: 0 0 3px 3px rgba(230, 230, 230, 0.95);
   border: 4px solid rgba(220, 220, 220, 0.97);
   border-top-width: 0;
-  margin-top: 3px;
   z-index: 49;
 }
 
@@ -3404,7 +3425,6 @@ a:hover {
 .menuBar > .tab > .title.active {
   background-color: var(--yellow20) !important;
   border-color: var(--yellow30);
-  /*color: white;*/
 }
 
 .menuBar .title.showingDD {
@@ -3427,8 +3447,8 @@ a:hover {
 }
 
 .menuBar .dropDown .title.active {
-  background-color: var(--yellow30);
-  /*color:white;*/
+  background-color: var(--yellow10);
+  /*border-left-color: var(--yellow20)*/
 }
 
 .menuBar .underline {
@@ -3442,11 +3462,6 @@ a:hover {
           transform: translateX(-50%);
   bottom: -1px;
 }
-
-/*.menuBar .tab:hover .underline{
-    width: calc(105% - 1.6em);
-}
-*/
 
 .menuBar .dropDown .underline {
   width: 0% !important;
@@ -4023,7 +4038,7 @@ button.datepick-cmd {
 }
 
 .datepick-month td .datepick-today {
-  background-color: var(--yellow30);
+  background-color: var(--yellow40) !important;
 }
 
 .datepick-month td .datepick-highlight {
