--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,10 +9,8 @@
 
 @import 'clear';
 @import 'style';
+@import 'forms';
 @import 'jquery.datepick';
 @import 'jquery.timepicker';
 @import 'ui.datepick';
-@import '../fullcalendar4.1/core/main.css';
-@import '../fullcalendar4.1/daygrid/main.css';
-@import '../fullcalendar4.1/list/main.css';
-@import '../fullcalendar4.1/timegrid/main.css';
+
