--- a/resources/sass/forms.css
+++ b/resources/sass/forms.css
@@ -127,7 +127,7 @@ textarea[data-followup]{
     transition: background-color 500ms;
 }
 .calendar .fc-event:not(.fc-bg-event){
-    background-color: var(--pink80);
+    background-color: var(--pink70);
     border-color: var(--pink);
     cursor: pointer;
 }
@@ -164,6 +164,17 @@ td.fc-today{background-color: var(--purple10) !important;}
     position: relative;
     top:50%;
     transform:translateY(-50%);
+}
+
+.date_link {
+    cursor: pointer;
+    transition: color 400ms;
+}
+.date_link:hover {
+    color: var(--pink);
+}
+.modified_indicator {
+    color: var(--pink);
 }
 
 .scale.small {
@@ -219,7 +230,7 @@ td.fc-today{background-color: var(--purple10) !important;}
     font-weight: 700;
 }
 .tooltip {
-    position: absolute;
+    position: fixed;
     display: inline-block;
     opacity: 0;
     top: 10em;
